--- a/part4/package.json
+++ b/part4/package.json
@@ -15,7 +15,9 @@
 		"express-async-errors": "^3.1.1",
 		"mongoose": "^5.12.1",
 		"mongoose-unique-validator": "^2.0.3",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"bcrypt": "^5.0.1",
+		"jsonwebtoken": "^8.5.1"
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
