--- a/part5/package.json
+++ b/part5/package.json
@@ -7,8 +7,14 @@
 		"axios": "^0.21.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.1",
+		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.3",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"redux": "^4.0.5",
+		"redux-thunk": "^2.3.0",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
@@ -43,6 +49,7 @@
 		"@testing-library/react": "^11.2.6",
 		"cypress": "^6.8.0",
 		"eslint-plugin-cypress": "^2.11.2",
-		"eslint-plugin-jest": "^24.3.2"
+		"eslint-plugin-jest": "^24.3.2",
+		"redux-devtools-extension": "^2.13.9"
 	}
 }
